name:                snake
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Sebastian Dröge
maintainer:          slomo@coaxion.net
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable snake
  main-is:             Snake.hs
  build-depends:       base
                     , lens
                     , mtl
                     , transformers
                     , primitive
                     , exceptions
                     , containers
                     , vector
                     , array
                     , mwc-random
                     , clock
                     , async
                     , linear
                     , StateVar
                     , sdl2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded

